// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Standard object metadata update should succeed when updating description 1`] = `
{
  "color": "",
  "description": "Updated test description for company",
  "icon": "IconBuildingSkyscraper",
  "id": Any<String>,
  "isActive": true,
  "labelPlural": "Companies",
  "labelSingular": "Company",
  "namePlural": "companies",
  "nameSingular": "company",
  "shortcut": "C",
  "standardOverrides": {
    "color": null,
    "description": "Updated test description for company",
    "icon": null,
    "labelPlural": null,
    "labelSingular": null,
  },
}
`;

exports[`Standard object metadata update should succeed when updating icon 1`] = `
{
  "color": "",
  "description": "A company",
  "icon": "IconBuildingSkyscraper",
  "id": Any<String>,
  "isActive": true,
  "labelPlural": "Companies",
  "labelSingular": "Company",
  "namePlural": "companies",
  "nameSingular": "company",
  "shortcut": "C",
  "standardOverrides": null,
}
`;

exports[`Standard object metadata update should succeed when setting isActive to false 1`] = `
{
  "color": "",
  "description": "A company",
  "icon": "IconBuildingSkyscraper",
  "id": Any<String>,
  "isActive": false,
  "labelPlural": "Companies",
  "labelSingular": "Company",
  "namePlural": "companies",
  "nameSingular": "company",
  "shortcut": "C",
  "standardOverrides": null,
}
`;

exports[`Standard object metadata update should succeed when updating labelSingular and labelPlural 1`] = `
{
  "color": "",
  "description": "A company",
  "icon": "IconBuildingSkyscraper",
  "id": Any<String>,
  "isActive": true,
  "labelPlural": "Businesses",
  "labelSingular": "Business",
  "namePlural": "companies",
  "nameSingular": "company",
  "shortcut": "C",
  "standardOverrides": {
    "color": null,
    "description": null,
    "icon": null,
    "labelPlural": "Businesses",
    "labelSingular": "Business",
  },
}
`;

exports[`Standard object metadata update should succeed when updating color 1`] = `
{
  "color": "red",
  "description": "A company",
  "icon": "IconBuildingSkyscraper",
  "id": Any<String>,
  "isActive": true,
  "labelPlural": "Companies",
  "labelSingular": "Company",
  "namePlural": "companies",
  "nameSingular": "company",
  "shortcut": "C",
  "standardOverrides": {
    "color": "red",
    "description": null,
    "icon": null,
    "labelPlural": null,
    "labelSingular": null,
  },
}
`;
